--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Jersey+15&display=swap');
 @import "tailwindcss";
+
+@theme{
+   --font-jersey: "Jersey 15", monospace;
+}
